[tool.poetry]
name = "dev-n2disk-ui"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
requests = "^2.32.3"
jsonify = "^0.5"
Flask-SQLAlchemy = "^3.1.1"
psycopg2-binary = "^2.9.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
